force-app/main/default/objects/Store_Soojung__c/Store_Soojung__c.object-meta.xml
<CustomObject>
    <label>Store_Soojung</label>
    <nameField>
        <label>Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores_Soojung</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>