force-app/main/default/objects/Store_Soojung__c/fields/CountryRegion__c.field-meta.xml
<CustomField>
    <fullName>CountryRegion__c</fullName>
    <label>Country/Region</label>
    <length>30</length>
    <type>Text</type>
</CustomField>