force-app/main/default/objects/Store_Soojung__c/fields/RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>RegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>User_Soojung__c</referenceTo>
    <relationshipLabel>Stores_Soojung</relationshipLabel>
    <relationshipName>Stores_Soojung</relationshipName>
    <type>Lookup</type>
</CustomField>