force-app/main/default/objects/Store_Soojung__c/fields/RowID__c.field-meta.xml
<CustomField>
    <fullName>RowID__c</fullName>
    <externalId>true</externalId>
    <label>RowID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>